# jdelacroix-ros-pkg

ardrone/: stack.xml
ardrone/ardrone/: CMakeLists.txt  package.xml
ardrone/ardrone_driver/: CMakeLists.txt  manifest.xml  package.xml
ardrone/ardrone_driver/include/: ARDroneDriver.h
ardrone/ardrone_driver/src/: ARDroneDriver.cpp
ardrone/ardrone_driver/srv/: ARDroneCommand.srv  ARDroneControl.srv
ardrone/ardrone_teleop/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
ardrone/ardrone_teleop/include/: CursesKeymote.h
ardrone/ardrone_teleop/launch/: adqr_teleop.sh  ardrone_test.launch
ardrone/ardrone_teleop/src/: CursesKeymote.cpp
arduino/: stack.xml
arduino/arduino/: CMakeLists.txt  package.xml
arduino/arduino_serial_port/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
arduino/arduino_serial_port/include/: ArduinoSerialPort.h
arduino/arduino_serial_port/src/: ArduinoSerialPort.cpp
arduino/arduino_serial_port/srv/: SerialPacketRead.srv  SerialPacketReadEOL.srv  SerialPacketWrite.srv
arduino/arduino_usb_gameport/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
arduino/arduino_usb_gameport/include/: ArduinoUSBGameport.h
arduino/arduino_usb_gameport/launch/: startup.launch
arduino/arduino_usb_gameport/msg/: GameportJoystick.msg
arduino/arduino_usb_gameport/src/: ArduinoUSBGameport.cpp
khepera3/: stack.xml
khepera3/khepera3/: CMakeLists.txt  package.xml
khepera3/khepera3_controller/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
khepera3/khepera3_controller/include/: Gazelle.h  Lion.h  MovePosition.h  PIDRegulator.h  UnicycleController.h  WingLion.h
khepera3/khepera3_controller/src/: Gazelle.cpp  Lion.cpp  MovePosition.cpp  PIDRegulator.cpp  UnicycleController.cpp  WingLion.cpp
khepera3/khepera3_driver/: CMakeLists.txt  build_hwdrv.sh  mainpage.dox  manifest.xml  package.xml
khepera3/khepera3_driver/hwdrv/k3driver/: Makefile  main.c
khepera3/khepera3_driver/include/: Khepera3Driver.h
khepera3/khepera3_driver/src/: Khepera3Driver.cpp
khepera3/khepera3_driver/srv/: SensorData.srv  UnicycleControl.msg
khepera3/khepera3_odometry/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
khepera3/khepera3_odometry/include/: Khepera3Odometry.h
khepera3/khepera3_odometry/src/: Khepera3Odometry.cpp
khepera3/launch/: khepera3_test.launch  lion_vs_gazelle.launch  optitrack_launch.sh
optitrack/: stack.xml
optitrack/optitrack_driver/: CMakeLists.txt  manifest.xml  package.xml
optitrack/optitrack_driver/msg/: OptiTrackData.msg
optitrack/optitrack_driver/src/: Optitrack.cpp
vicon/: stack.xml
vicon/vicon/: CMakeLists.txt  package.xml
vicon/vicon_driver/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
vicon/vicon_driver/include/: ViconClient.h
vicon/vicon_driver/msg/: ViconData.msg
vicon/vicon_driver/src/: ViconClient.cpp
