<package>
  <name>ardrone_teleop</name>
  <version>2.0.0</version>
  <description>ardrone_teleop</description>
  <maintainer email="ajpl.delacroix@gmail.com">Jean-Pierre de la Croix</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ardrone_teleop</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Jean-Pierre de la Croix</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>ardrone_driver</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>ardrone_driver</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>ardrone_driver</test_depend> -->

</package>
