<package>
  <name>arduino_serial_port</name>
  <version>2.0.0</version>
  <description>Arduino serial port ROS interface. Interprets the serial data from the Arduino (assuming it is running the provided .hex) on the serial port: /dev/ttyUSB0.</description>
  <maintainer email="ajpl.delacroix@gmail.com">Jean-Pierre de la Croix</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/arduino_serial_port</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Jean-Pierre de la Croix</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->

</package>
