<package>
  <name>vicon</name>
  <version>2.0.0</version>
  <description>Vicon RTE ROS driver</description>
  <maintainer email="ajpl.delacroix@gmail.com">Jean-Pierre de la Croix</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/vicon</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Jean-Pierre de la Croix</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>vicon_driver</run_depend>

  <!-- Dependencies needed only for running tests. -->
  
</package>
